# reply

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  offre.md
.github/workflows/: ci.yml
llm-finetuning/: .env.example  .gitlab-ci.yml  Dockerfile  Makefile  README.md  TODO.md  pyproject.toml
llm-finetuning/configs/: lora.yaml
llm-finetuning/src/finetune/: __main__.py  config.py  dataset.py  errors.py  evaluate.py  generator.py  prompt.py  report.py  runner.py  train.py
llm-finetuning/tests/: conftest.py  test_dataset.py  test_evaluate.py  test_runner.py
llm-finetuning/vertex/: job.py
llm-secure-inference/: .env.example  Dockerfile  Makefile  README.md  RUNBOOK.md  TODO.md  pyproject.toml
llm-secure-inference/k8s/: deployment.yaml  hpa.yaml  networkpolicy.yaml  pdb.yaml  rbac.yaml  service.yaml  servicemonitor.yaml
llm-secure-inference/src/inference/: audit.py  auth.py  backend.py  config.py  errors.py  instrumentation.py  main.py  metrics.py  models.py  ratelimit.py  service.py  vault_client.py
llm-secure-inference/tests/: conftest.py  test_api.py  test_audit.py  test_auth.py  test_backend.py  test_metrics.py  test_ratelimit.py  test_service.py  test_vault_client.py
llm-secure-inference/tests/integration/: test_redis_ratelimit.py  test_vault_secret.py
ml-observability/: .env.example  Dockerfile  Makefile  README.md  TODO.md  docker-compose.yml  pyproject.toml
ml-observability/grafana/: dashboard.json
ml-observability/migrations/: 001_init.sql
ml-observability/prometheus/: prometheus.yml
ml-observability/src/monitor/: alerts.py  config.py  drift.py  errors.py  instrumentation.py  main.py  metrics.py  models.py  monitoring.py  schemas.py  store.py
ml-observability/tests/: conftest.py  test_api.py  test_drift.py  test_monitoring.py  test_store_alerts.py
mlops-pipeline/: .env.example  .gitlab-ci.yml  Dockerfile  Makefile  README.md  TODO.md  pyproject.toml
mlops-pipeline/data/: sample.csv
mlops-pipeline/src/pipeline/: __main__.py  config.py  dataset.py  errors.py  evaluation.py  models.py  registry.py  runner.py  tracker.py  train.py
mlops-pipeline/tests/: test_dataset.py  test_evaluation.py  test_registry.py  test_runner.py  test_train.py
mlops-pipeline/vertex/: pipeline.py
rag-kubernetes/: .env.example  .gitlab-ci.yml  Dockerfile  Makefile  README.md  TODO.md  pyproject.toml
rag-kubernetes/k8s/: deployment.yaml  hpa.yaml  migration-job.yaml  networkpolicy.yaml  pdb.yaml  secret.example.yaml  service.yaml
rag-kubernetes/migrations/: 001_init.sql  002_unique_chunk.sql
rag-kubernetes/src/rag_service/: auth.py  chunking.py  config.py  embeddings.py  errors.py  generation.py  ingestion.py  logging_setup.py  main.py  metrics.py  models.py  pipeline.py  retrieval.py  store.py  vertex.py
rag-kubernetes/tests/: conftest.py  test_api.py  test_chunking.py  test_embeddings.py  test_integration.py  test_pipeline.py  test_retrieval.py  test_store.py  test_vertex.py
