[project]
name = "llm-secure-inference"
version = "0.1.0"
description = "Secret-managed LLM inference API (Vault, Redis rate-limiting)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "hvac>=2.1",
    "redis>=5.0",
    "httpx>=0.27",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.9",
    "httpx>=0.27",
    "testcontainers>=4.0",
]
vertex = ["google-cloud-aiplatform>=1.40"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["hvac.*", "vertexai.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-m 'not integration'"
markers = ["integration: requires Docker (testcontainers)"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
