[project]
name = "ml-observability"
version = "0.1.0"
description = "Model monitoring with Prometheus, Grafana and drift detection"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "prometheus-client>=0.20",
    "asyncpg>=0.29",
    "redis>=5.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4", "mypy>=1.9"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
