[project]
name = "mlops-pipeline"
version = "0.1.0"
description = "Train to deploy MLOps pipeline (MLflow, JFrog, Vertex AI)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "scikit-learn>=1.4",
    "pandas>=2.2",
    "mlflow>=2.12",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4", "mypy>=1.9"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["sklearn.*", "mlflow.*", "joblib.*", "pandas.*"]
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
